# types

./: .gitignore  HOWTO  LICENSE  README.md  pyproject.toml  run_imports.py  setup.py
.github/: FUNDING.yml
.github/workflows/: publish_to_pypi.yml
codegen/: LICENSE  README.md  __main__.py  objects.py  pyproject.toml  requirements.txt
codegen/config/: config.yaml  yaml_processing.py
codegen/methods/: ads.py  apps.py  board.py  bugtracker.py  docs.py  donut.py  friends.py  groups.py  market.py  messages.py  newsfeed.py  orders.py  pages.py  podcasts.py  polls.py  pretty_cards.py  stats.py  status.py  storage.py  store.py  stories.py  translations.py  users.py  utils.py  wall.py  widgets.py
codegen/methods_parser/: main.py  models.py
codegen/objects_parser/: main.py
codegen/objects_parser/models/: models.py  schema_objects.py
codegen/responses/: account.py  apps.py  auth.py  base.py  board.py  database.py  groups.py  lead_forms.py  messages.py  orders.py  pages.py  photos.py  polls.py  secure.py  status.py  utils.py
codegen/responses_parser/: imports_dict.py  main.py  models.py  response_utils.py
codegen/results/: codegen.py
codegen/results/methods/: account.py  ads.py  adsweb.py  appWidgets.py  apps.py  auth.py  base.py  board.py  database.py  docs.py  donut.py  downloadedGames.py  fave.py  friends.py  gifts.py  groups.py  likes.py  market.py  messages.py  newsfeed.py  notes.py  notifications.py  orders.py  pages.py  photos.py  podcasts.py  polls.py  prettyCards.py  search.py  secure.py  stats.py  status.py  storage.py  store.py  stories.py  streaming.py  users.py  utils.py  video.py  wall.py  (+1 more)
codegen/results/responses/: account.py  ads.py  adsweb.py  appWidgets.py  apps.py  auth.py  base.py  board.py  database.py  docs.py  donut.py  downloadedGames.py  fave.py  friends.py  gifts.py  groups.py  likes.py  market.py  messages.py  newsfeed.py  notes.py  notifications.py  orders.py  pages.py  photos.py  podcasts.py  polls.py  prettyCards.py  search.py  secure.py  stats.py  status.py  storage.py  store.py  stories.py  streaming.py  users.py  utils.py  video.py  wall.py  (+1 more)
codegen/tests/: test_utils.py
codegen/utils/: os_utils.py  strings_util.py  titles.py
generator/: __main__.py  data.py  lib.py  parse_types.py  types.py  utility.py
generator/nicifications/methods/: friends.py  messages.py  newsfeed.py
generator/templates/: methods.jinja2  objects.jinja2  responses.jinja2
tests/: test_all_events.py  test_categories.py
vkbottle_types/: __init__.py  base_model.py  categories.py  objects.py  state.py
vkbottle_types/codegen/: objects.py
vkbottle_types/codegen/methods/: account.py  ads.py  adsweb.py  app_widgets.py  apps.py  asr.py  auth.py  board.py  bugtracker.py  calls.py  database.py  docs.py  donut.py  downloaded_games.py  fave.py  friends.py  gifts.py  groups.py  lead_forms.py  likes.py  market.py  messages.py  newsfeed.py  notes.py  notifications.py  orders.py  pages.py  photos.py  podcasts.py  polls.py  pretty_cards.py  search.py  secure.py  stats.py  status.py  storage.py  store.py  stories.py  streaming.py  translations.py  (+5 more)
vkbottle_types/codegen/responses/: account.py  addresses.py  ads.py  adsweb.py  app_widgets.py  apps.py  asr.py  audio.py  auth.py  base.py  board.py  bugtracker.py  callback.py  calls.py  client.py  comment.py  database.py  (+41 more)
vkbottle_types/events/: __init__.py  bot_events.py  bot_typings.py  events_base.py  typings.py  user_events.py  user_typings.py
vkbottle_types/methods/: __init__.py  account.py  ads.py  adsweb.py  appWidgets.py  app_widgets.py  apps.py  asr.py  auth.py  base_category.py  board.py  bugtracker.py  database.py  docs.py  donut.py  downloadedGames.py  downloaded_games.py  fave.py  friends.py  gifts.py  groups.py  leadForms.py  lead_forms.py  leads.py  likes.py  market.py  messages.py  newsfeed.py  notes.py  notifications.py  orders.py  pages.py  photos.py  podcasts.py  polls.py  prettyCards.py  pretty_cards.py  search.py  secure.py  stats.py  (+11 more)
vkbottle_types/objects/: account.py  addresses.py  ads.py  apps.py  audio.py  base.py  base_model.py  board.py  callback.py  comment.py  database.py  docs.py  events.py  fave.py  friends.py  gifts.py  groups.py  leads.py  likes.py  link.py  market.py  media.py  message.py  messages.py  newsfeed.py  notes.py  notifications.py  oauth.py  object_generator.py  orders.py  owner.py  pages.py  photos.py  polls.py  prettyCards.py  search.py  secure.py  stats.py  status.py  storage.py  (+6 more)
vkbottle_types/responses/: __init__.py  account.py  ads.py  adsweb.py  appWidgets.py  app_widgets.py  apps.py  asr.py  auth.py  base.py  base_response.py  board.py  bugtracker.py  calls.py  database.py  docs.py  donut.py  downloadedGames.py  downloaded_games.py  execute.py  fave.py  friends.py  gifts.py  groups.py  leadForms.py  lead_forms.py  leads.py  likes.py  market.py  messages.py  newsfeed.py  notes.py  notifications.py  orders.py  pages.py  photos.py  podcasts.py  polls.py  prettyCards.py  pretty_cards.py  (+14 more)
vkbottle_types/tools/: __init__.py  model_loader.py
(+7 files in other folders)
