[project]
name = "vkbottle-types"
description = "VK API methods & types for vkbottle."
license = "MIT"
dynamic = ["version"]
authors = [{name = "timoniq"}]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
  "pydantic (>=2.11.9,<3.0.0)",
  "vkbottle (>=4.6.0,<5.0.0)",
  "typing-extensions (>=4.15.0,<5.0.0)",
  "msgspec (>=0.19.0,<0.20.0)",
]

[tool.poetry]
version = "5.199.99.10"
packages = [
    { include = "vkbottle_types" }
]
requires-poetry = ">=2.0.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.1"
requests = "^2.32.5"
tqdm = "^4.67.1"
dataclass-factory = "^2.16"
jinja2 = "^3.1.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 150
target-version = "py310"
lint.select = ["I", "N", "ANN", "COM", "YTT", "SIM"]
lint.ignore = [
  "ANN001", "ANN002", "ANN003", "ANN201", "ANN202",
  "ANN204", "ANN206", "ANN401", "COM812", "N805", "N818",
  "F405"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
