[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vkbottle-types"
description = "VK API methods & types for vkbottle."
license = "MIT"
version = "5.199.99.17"
authors = [{name = "timoniq"}]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
  "pydantic (>=2.12.5,<3.0.0)",
  "vkbottle (>=4.8.0,<5.0.0)",
  "typing-extensions (>=4.15.0,<5.0.0)",
  "msgspec (>=0.20.0,<0.21.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.8"
requests = "^2.33.1"
tqdm = "^4.67.3"
dataclass-factory = "^2.16"
jinja2 = "^3.1.6"

[tool.ruff]
line-length = 150
target-version = "py310"
lint.select = ["I", "N", "ANN", "COM", "YTT", "SIM"]
lint.ignore = [
  "ANN001", "ANN002", "ANN003", "ANN201", "ANN202",
  "ANN204", "ANN206", "ANN401", "COM812", "N805", "N818",
  "F405"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
