[tool.poetry]
name = "vk_schema_codegen"
version = "0.1.0"
description = "Python vktypes codegeneration"
authors = ["ScriptHound <grinkiko@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.4.1"
pytest = "^6.2.2"
flake8 = "^3.8.4"
pyparsing = "^2.4.7"
typing-extensions = "^3.7.4"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
